<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    >

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/method_name"
            android:gravity="right"
            android:textSize="@dimen/textsize" />

        <EditText
            android:id="@+id/name_add_or_edit_method"
            android:padding="@dimen/padding"
            android:singleLine="true"
            android:textSize="@dimen/textsize" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/isdefault"
            android:textSize="@dimen/textsize" />

        <Switch
            android:id="@+id/isdefault_add_or_edit_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_gravity="left"
            android:textOn="@string/yes"
            android:textOff="@string/no" />

    </TableRow>

</TableLayout>